# juku-scheduler

./: index.html  manifest.webmanifest  sw.js  sync-app.html
brain-cognitive-architecture-jp/: .gitignore  README.md  SKILL.md
brain-cognitive-architecture-jp/constitution/: CORE_PRINCIPLES.md  LEARNING_POLICY.md  PRIVACY_POLICY.md  SAFETY_POLICY.md
brain-cognitive-architecture-jp/references/: README.md  attention-and-working-memory.md  consolidation-and-forgetting.md  inhibition-and-homeostasis.md  (+6 more)
docs/: 実装プロンプト集.md  講師通知設計.md
juku-github更新/: sync-app.html
mac-neural-grid/: README.md  pyproject.toml
mac-neural-grid-builder/: SKILL.md
mac-neural-grid/config/: policies.yaml
mac-neural-grid/docs/: ARCHITECTURE.md  OPERATIONS.md  REMOTE-MACS.md
mac-neural-grid/examples/: sample-job.yaml
mac-neural-grid/examples/docs/: apple-silicon.txt  distributed-safety.txt
mac-neural-grid/launchd/: com.miyagawa.mac-neural-grid.worker.plist
mac-neural-grid/schemas/: capability.schema.json  job.schema.json  node.schema.json  policy.schema.json  result.schema.json
mac-neural-grid/src/mac_neural_grid/: __init__.py  __main__.py  artifact_store.py  cli.py  config.py  database.py  discovery.py  dispatcher.py  executor.py  health.py  ids.py  inventory.py  jobspec.py  logging.py  model_router.py  nlplan.py  policy_engine.py  retry.py  rollback.py  scheduler.py  schemas.py  security.py  transport.py  worker.py
mac-neural-grid/tests/: conftest.py  test_failure.py  test_integration.py  test_privacy.py  test_remote.py  test_schemas.py  test_security.py  test_unit.py
(+78 files in other folders)
