[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-neural-grid"
version = "0.1.0"
description = "複数 Mac を計算ノードとして安全に統括する分散 AI ジョブ実行 CLI（MVP / Phase 1）"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
mac-neural-grid = "mac_neural_grid.cli:main"
mng = "mac_neural_grid.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
